package com.example.javamenu.Helper;

public interface ChangeNumberItemListener {
    void changed();
}
